2001-01-12  Richard M. Stallman  <rms@caffeine.ai.mit.edu>

	* subr.el (last): Handle a list that doesn't end in nil.

2001-01-12  Sam Steingold  <sds@gnu.org>

	* emacs-lisp/lisp-mode.el (lisp-mode-shared-map): Bind `backspace'
	to `backward-delete-char-untabify'.

2001-01-12  Dave Love  <fx@gnu.org>

	* cus-edit.el (customize-menu-create): Fix the :filter following
	easymenu change.

	* wid-edit.el (function): Add :match-alternatives.
	(widget-color-action): Doc fix.

2001-01-12  Gerd Moellmann  <gerd@gnu.org>

	* calendar/calendar.el (calendar-basic-setup): Doc fix.

2001-01-12  Kenichi Handa  <handa@etl.go.jp>

	* international/mule-cmds.el (prefer-coding-system): Fix
	docstring.

	* international/ccl.el (define-ccl-program): Fix docstring.

2001-01-11  Dave Love  <fx@gnu.org>

	* international/mule-cmds.el (standard-display-european-internal):
	Set display table for 2208 as for 160.

	* progmodes/ada-mode.el (ada-popup-key): Fix last change.

	* progmodes/fortran.el (fortran-mode-map): Modify Customization
	entry for custom-menu-create change.
	(fortran-strip-sqeuence-nos): Make arg optional.  Fix regexp and
	don't cons it in the search loop.

	* imenu.el (imenu--truncate-items): Revert last change.

2001-01-11  Eli Zaretskii  <eliz@is.elta.co.il>

	* info.el (Info-setup-header-line): If the node header includes
	either Next: or Prev: links, don't show the File: and Node: parts
	in the header line.

2001-01-11  Gerd Moellmann  <gerd@gnu.org>

	* comint.el (comint-goto-process-mark): Don't print a message
	when running in batch mode.

	* isearch.el (isearch-search): In the condition-case handler for
	`error', set isearch-invalid-regexp to the whole error message.

	* subr.el (eval-after-load): Call load-symbol-file-load-history to
	ensure that eval-after-load works for files dumped with Emacs.

	* help.el (load-symbol-file-load-history): New function extracted
	from function symbol-file.
	(symbol-file): Use it.
